minting-marketplace/src/components/AboutPage/AboutPageNew/AboutPageNew.css
/* ... */
@media screen and (max-width: 650px) {
    .home-about--page .video-locked {
        width: 400px;
        height: 130px;
    }

    .home-about--page .box-video:first-child, .home-about--page .box-video:nth-child(2) {
        display: none;
    }

    .video-locked img {
        width: 150px;
    }
    
    .container-content-metamask .container-block-video .text-watch-token {
        display: none;
    }

    .container-content-metamask .metamask-box img {
        width: 70%;
        height: auto;
        margin-bottom: 40px;
    }

    .container-content-metamask .btn-buy-metamask {
        display: none;
    }

    .about-streams-video {
        margin-bottom: 30px;
    }

    .container-content-metamask {
        flex-direction: column;
    }

    .container-content-metamask .content-show-arrow {
        position: absolute;
        display: block;
        bottom: 250px;
        right: 160px;
    }

    .container-content-metamask .content-show-arrow img{
        width: 140px;
        height: auto;
    }
} 

@media screen and (max-width: 575px) {
    .about-page-platform .platform-box .categories-list {
        border: none;
        width: 230px;
    }

    .about-page-platform-content {
        justify-content: center;
    }

    .about-page-platform .platform-box:first-child .categories-list ul, .about-page-platform .platform-box:nth-child(3) .categories-list ul {
        border-right: 1px solid #E5E5E5;
    }

    .about-page-platform .platform-box .categories-list ul li{
        font-size: 16px;
        text-align: right;
    }
    
    .about-page-platform .platform-box .platform-title {
        width: 200px;
        height: 40px;
    }

    .about-page-platform-content .platform-title-box {
        display: flex;
        justify-content: center;
    }
    
    .about-streams-video iframe {
        width: 100%;
    }

    .ecosystem-airdrops-list {
        flex-direction: column;
        align-content: center;
        padding: 0 23px;
    }

    .ecosystem-airdrops-list .airdrops-items {
        width: 100%;
    }

    .home-about--page .ecosystem-airdrops {
        border-radius: 16px;
        background: #383637;
        margin: 60px 19px 10px 19px;
        padding-top: 28px;
    }

    .home-about--page .tokenomics-ecosystem .ecosystem-list {
        background: #383637;
        padding: 20px 0;
    }

    .tokenomics-ecosystem .tokenomics-block-list .tokenomics-items .items-title {
        width: 200px;
        height: 40px;
        font-size: 18px;
    }

    .about-roadmap .map-progress {
        width: 350px;
    }

    .about-map-item .map-progress .line-purple, .about-map-item .map-progress .line-private, .about-map-item .map-progress .line-public {
        width: 150px;
        z-index: 1;
    }
}

@media screen and (max-width: 515px) {
    .about-page-platform .platform-box .categories-list {
        border: none;
        width: 150px;
    }

    .about-page-platform .platform-box .platform-title {
        width: 150px;
        font-size: 20px;
    }

    .about-page-platform .platform-box:first-child .platform-title, .about-page-platform .platform-box:nth-child(3) .platform-title {
        margin-right: 10px;
    }
}

@media screen and (max-width: 500px) {
    .home-about--page .tokens-description {
        width: 100%;
        padding: 0 10px;
    }
}


@media screen and (max-width: 480px) {
    .left-tokens.about-page {
        margin-bottom: 350px;
    }

    .about-page-platform .platform-box .categories-list ul li {
        text-align: center;
    }

    .about-streams-video iframe {
        width: 90vw;
        height: 240px;
    }

    .home-about--page .video-locked {
        width: 300px;
        height: 90px;
    }

    .container-content-metamask .container-block-video .video-locked img {
        height: 90px;
        width: 100px;
    }
    
    .home-about--page .video-description .video-title, .video-description .video-timer p {
        font-size: 13px;
    }

    .home-about--page .video-icon p {
        font-size: 12px;
    }

    .home-about--page .video-icon {
        top: 20%;
    }

    .container-content-metamask .content-show-arrow {
        bottom: 180px;
        right: 110px;
    }

    .container-content-metamask .content-show-arrow img {
        width: 120px;
    }

    .about-tokenomics .about-tokenomics-title {
        font-size: 24px;
    }
    
    .tokenomics-ecosystem .ecosystem-list-text {
        font-size: 14px;
        text-align: left;
    }

    .ecosystem-airdrops .ecosystem-airdrops-text {
        font-size: 16px;
        font-weight: 600;
    }

    .ecosystem-airdrops-list .airdrops-items ul li {
        font-size: 14px;
    }

    .ecosystem-airdrops-list .airdrops-items:first-child {
        margin-right: 0px;
    }

    .about-roadmap .about-road-title {
        font-size: 24px;
    }

    .about-map-item .map-item-desc p {
        font-size: 14px;
    }

    .about-roadmap .map-progress {
        width: 280px;
    }

    .about-map-item .map-progress .line-purple, .about-map-item .map-progress .line-private, .about-map-item .map-progress .line-public {
        width: 120px;
        z-index: 1;
    }

    .about-roadmap .map-item-progress {
        margin-top: 20px;
    }
}
/* ... */

